--- a/server/modules/responses/invalid-url.html
+++ b/server/modules/responses/invalid-url.html
@@ -1,12 +1,36 @@
 <html>
     <head>
         <title>Invalid URL.</title>
-        <meta http-equiv="refresh" content="3; URL=/ytdl/index.html">
+        <meta http-equiv="refresh" content="10; URL=/ytdl/index.html">
         <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+            html * {
+                font-family: 'Roboto', sans-serif;
+            }
+            body {
+                background-color: rgb(50, 50, 50);
+            }
             h1 {
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                color: white;
+                font-family: 'Roboto', sans-serif;
+                left: 0;
+                margin-top: 35px;
+                text-align: center;
+                width: 100%;
+                font-size: 60px;
+            }
+            h2 {
+                color: white;
+                font-family: 'Roboto', sans-serif;
+                left: 0;
+                margin-top: 20px;
+                text-align: center;
+                width: 100%;
+                font-size: 30px;
             }
         </style>
     </head>
-    <h1>Please provide a valid YouTube URL.</h1>
+    <h1>An error occurred during conversion.</h1>
+    <h2>This usually happens when you provide an invalid URL.</h2>
+    <h2> <a href='/ytdl/index.html' style='color: white;'>Click here to go back.</a></h2>
 </html>
